--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-certifi==2023.5.7
-charset-normalizer==3.1.0
-idna==3.4
-python-dotenv==1.0.0
-requests==2.31.0
-termcolor==2.3.0
-urllib3==2.0.3
+openai==0.27.4
+nanoid==2.0.0
