--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,114 @@
-openai==0.27.4
+aider==0.2.4
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.7.0
+async-timeout==4.0.2
+attrs==23.1.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+bs4==0.0.1
+case-converter==1.1.0
+certifi==2022.12.7
+cfgv==3.3.1
+charset-normalizer==3.1.0
+chromadb==0.3.21
+click==8.1.3
+clickhouse-connect==0.6.3
+commonmark==0.9.1
+configparser==5.3.0
+dataclasses-json==0.5.8
+decorator==5.1.1
+distlib==0.3.6
+docker==6.1.3
+docstring-parser==0.15
+duckdb==0.8.1
+fastapi==0.98.0
+filelock==3.12.2
+frozendict==2.3.8
+frozenlist==1.3.3
+fsspec==2023.6.0
+h11==0.14.0
+hnswlib==0.7.0
+httpcore==0.17.2
+httptools==0.5.0
+httpx==0.24.1
+huggingface-hub==0.15.1
+humanloop==0.4.12
+identify==2.5.24
+idna==3.4
+Jinja2==3.1.2
+joblib==1.2.0
+langchain==0.0.208
+langchainplus-sdk==0.0.16
+lz4==4.3.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+mdurl==0.1.2
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
 nanoid==2.0.0
+networkx==3.1
+nltk==3.8.1
+nodeenv==1.8.0
+numexpr==2.8.4
+numpy==1.25.0
+openai==0.27.4
+openapi-schema-pydantic==1.2.4
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+platformdirs==2.6.2
+pluggy==1.2.0
+posthog==3.0.1
+pre-commit==3.3.3
+pydantic==1.10.9
+Pygments==2.15.1
+pyscript==0.2.5
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-liquid==1.9.2
+pytz==2023.3
+PyYAML==6.0
+regex==2023.6.3
+requests==2.31.0
+rich==12.6.0
+rich-click==1.6.1
+safetensors==0.3.1
+scikit-learn==1.2.2
+scipy==1.10.1
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.16
+starlette==0.27.0
+sympy==1.12
+tenacity==8.2.2
+termcolor==2.3.0
+threadpoolctl==3.1.0
+tiktoken==0.3.3
+tokenizers==0.13.3
+toml==0.10.2
+torch==2.0.1
+torchvision==0.15.2
+tqdm==4.65.0
+transformers==4.30.2
+typer==0.4.2
+typing-inspect==0.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
+urllib3==1.26.16
+uvicorn==0.22.0
+uvloop==0.17.0
+validators==0.20.0
+virtualenv==20.23.1
+watchfiles==0.19.0
+websocket-client==1.6.0
+websockets==11.0.3
+yarl==1.9.2
+zstandard==0.21.0
