npm audit fix --force

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^12.0.4",
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "postcss": "8.4.24",
